Alteração da tela HOME, adicionados os componentes de entrada

--- a/ion1trim1/src/app/home/home.page.html
+++ b/ion1trim1/src/app/home/home.page.html
@@ -7,11 +7,22 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+
   <div id="container">
-    <div>Area 1</div>
-    <div>Area 2</div>
-    <div>Area 3</div>
-    <div>Area 4</div>
-    <ion-button color="tertiary">Tertiary</ion-button>
+    <ion-item>
+      <ion-label position="floating">
+        Login
+      </ion-label>
+      <ion-input></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="floating">
+        senha
+      </ion-label>
+      <ion-input type="password"></ion-input>
+    </ion-item>
+
   </div>
+
 </ion-content>
