--- a/ion1trim1/src/app/home/home.page.html
+++ b/ion1trim1/src/app/home/home.page.html
@@ -23,6 +23,11 @@
       <ion-input type="password"></ion-input>
     </ion-item>
 
+    <div>
+    <ion-button color = "tertiary" size = "block" id="botao">Fazer Login</ion-button>
+    </div>
+
+
   </div>
 
 </ion-content>
